--- a/productsuk.html
+++ b/productsuk.html
@@ -45,57 +45,57 @@
                     "ingredients": "Non-Alcoholic Beverages",
                 },
                 {
-                    "name": "Pepsi",
+                    "name": "Pepsi 0.25",
                     "price": "120",
                     "ingredients": "Non-Alcoholic Beverages",
                 },
                 {
-                    "name": "Pepsi Max",
+                    "name": "Pepsi Max 0.25",
                     "price": "120",
                     "ingredients": "Non-Alcoholic Beverages",
                 },
                 {
-                    "name": "Gazoza",
+                    "name": "Gazoza 0.25",
                     "price": "100",
                     "ingredients": "Non-Alcoholic Beverages",
                 },
                 {
-                    "name": "Ice Tea",
+                    "name": "Ice Tea 0.25",
                     "price": "120",
                     "ingredients": "Non-Alcoholic Beverages",
                 },
                 {
-                    "name": "7Up",
+                    "name": "7Up 0.25",
                     "price": "120",
                     "ingredients": "Non-Alcoholic Beverages",
                 },
                 {
-                    "name": "Juice",
+                    "name": "Juice 0.25",
                     "price": "140",
                     "ingredients": "Non-Alcoholic Beverages",
                 },
                 {
-                    "name": "Fresh Lemon Juice",
+                    "name": "Fresh Lemon Juice 0.25",
                     "price": "90",
                     "ingredients": "Non-Alcoholic Beverages",
                 },
                 {
-                    "name": "Fresh Orange Juice",
+                    "name": "Fresh Orange Juice 0.25",
                     "price": "180",
                     "ingredients": "Non-Alcoholic Beverages",
                 },
                 {
-                    "name": "Mirinda",
+                    "name": "Mirinda 0.25",
                     "price": "120",
                     "ingredients": "Non-Alcoholic Beverages",
                 },
                 {
-                    "name": "Homemade Lemonade",
+                    "name": "Homemade Lemonade 0.25",
                     "price": "160",
                     "ingredients": "Non-Alcoholic Beverages",
                 },
                 {
-                    "name": "Fruit Soda",
+                    "name": "Fruit Soda 0.33",
                     "price": "140",
                     "ingredients": "Non-Alcoholic Beverages"
                 }
@@ -177,92 +177,92 @@
         // WINES
                 [
                 {
-                    "name": "Synthesis Cuvee Barrique (Dry)",
+                    "name": "Synthesis Cuvee Barrique (Dry) 0.75",
                     "price": "1900",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Dionis Vranec Barrique (Dry)",
+                    "name": "Dionis Vranec Barrique (Dry) 0.75",
                     "price": "2200",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Hermes Vranec (Dry)",
+                    "name": "Hermes Vranec (Dry) 0.75",
                     "price": "1300",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Hermes Cabernet Sauvignon (Dry)",
+                    "name": "Hermes Cabernet Sauvignon (Dry) 0.75",
                     "price": "1300",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Amfora Vranec (Semi-Dry)",
+                    "name": "Amfora Vranec (Semi-Dry) 0.75",
                     "price": "900",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Chardonnay Barrique Fermented (Dry)",
+                    "name": "Chardonnay Barrique Fermented (Dry) 0.75",
                     "price": "2400",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Muscat Temjanika (Semi-Dry)",
+                    "name": "Muscat Temjanika (Semi-Dry) 0.75",
                     "price": "1350",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Elegija Chardonnay (Dry)",
+                    "name": "Elegija Chardonnay (Dry) 0.75",
                     "price": "1300",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Elegija Traminer (Dry)",
+                    "name": "Elegija Traminer (Dry) 0.75",
                     "price": "1300",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Elegija Zupljanka (Dry)",
+                    "name": "Elegija Zupljanka (Dry) 0.75",
                     "price": "1300",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Amphora Cuvee (Semi-Dry)",
+                    "name": "Amphora Cuvee (Semi-Dry) 0.75",
                     "price": "900",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Temjanika (Dry)",
+                    "name": "Temjanika (Dry) 0.75",
                     "price": "1400",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Chardonnay (Dry)",
+                    "name": "Chardonnay (Dry) 0.75",
                     "price": "1400",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Sauvignon Blanc (Dry)",
+                    "name": "Sauvignon Blanc (Dry) 0.75",
                     "price": "1400",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Amfora Rose (Dry)",
+                    "name": "Amfora Rose (Dry) 0.75",
                     "price": "900",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Elegija Syrah (Dry)",
+                    "name": "Elegija Syrah (Dry) 0.75",
                     "price": "1200",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Muscat Rolinger (Dry)",
+                    "name": "Muscat Rolinger (Dry) 0.75",
                     "price": "1250",
                     "ingredients": "Wine",
                 },
                 {
-                    "name": "Muscat Rolinger Red (Semi-Dry)",
+                    "name": "Muscat Rolinger Red (Semi-Dry) 0.75",
                     "price": "1250",
                     "ingredients": "Wine",
                 }
@@ -330,207 +330,207 @@
         // Alcoholic beverages
         [
           {
-            name: "Yellow Rakija",
+            name: "Yellow Rakija 0.04",
             price: "120",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "White Rakija",
+            name: "White Rakija 0.04",
             price: "120",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Mastika",
+            name: "Mastika 0.04",
             price: "120",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Rakija azbuka",
+            name: "Rakija azbuka 0.04",
             price: "130",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Gordion Amber Rakija",
+            name: "Gordion Amber Rakija 0.04",
             price: "160",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Badel Williams Rakija",
+            name: "Badel Williams Rakija 0.04",
             price: "170",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Gin Badel",
+            name: "Gin Badel 0.04",
             price: "120",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Smidgin",
+            name: "Smidgin 0.04",
             price: "250",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Gin Beefeater",
+            name: "Gin Beefeater 0.04",
             price: "170",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Gin Gordons",
+            name: "Gin Gordons 0.04",
             price: "190",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Gin Pink Gordons",
+            name: "Gin Pink Gordons 0.04",
             price: "180",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Gin Bombay",
+            name: "Gin Bombay 0.04",
             price: "240",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Vodka Badel",
+            name: "Vodka Badel 0.04",
             price: "120",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Baileys",
+            name: "Baileys 0.04",
             price: "180",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Feneys",
+            name: "Feneys 0.04",
             price: "150",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Krushkovac Pear Liqueur",
+            name: "Krushkovac Pear Liqueur 0.04",
             price: "140",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Tequila",
+            name: "Tequila 0.03",
             price: "130",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Amaretto",
+            name: "Amaretto 0.04",
             price: "150",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Korlat Slivovitz",
+            name: "Korlat Slivovitz 0.04",
             price: "220",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Korlat Maraska",
+            name: "Korlat Maraska 0.05",
             price: "220",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Shot",
+            name: "Shot 0.04",
             price: "100",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Smirnoff",
+            name: "Smirnoff 0.04",
             price: "160",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Jack Daniels",
+            name: "Jack Daniels 0.04",
             price: "280",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Jameson",
+            name: "Jameson 0.04",
             price: "180",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Jameson Black",
+            name: "Jameson Black 0.04",
             price: "290",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Johnny Red",
+            name: "Johnny Red 0.04",
             price: "160",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Johnny Black",
+            name: "Johnny Black 0.04",
             price: "260",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "4 Roses",
+            name: "4 Roses 0.04",
             price: "200",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "William Peel",
+            name: "William Peel 0.04",
             price: "150",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Rum Morgan",
+            name: "Rum Morgan 0.04",
             price: "160",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Jagermeister",
+            name: "Jagermeister 0.04",
             price: "210",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Pelinkovac Badel",
+            name: "Pelinkovac Badel 0.04",
             price: "120",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Pelinkovac Antik",
+            name: "Pelinkovac Antik 0.04",
             price: "170",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Cognac Badel",
+            name: "Cognac Badel 0.04",
             price: "120",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Cognac Badel Black",
+            name: "Cognac Badel Black 0.04",
             price: "160",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Rum Badel",
+            name: "Rum Badel 0.04",
             price: "120",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Stock 84",
+            name: "Stock 84 0.04",
             price: "150",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Tequila Olmeca",
+            name: "Tequila Olmeca 0.04",
             price: "170",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Aperol",
+            name: "Aperol 0.04",
             price: "160",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Korlat Lozova",
+            name: "Korlat Lozova 0.04",
             price: "220",
             ingredients: "Alcoholic beverages",
           },
           {
-            name: "Campari",
+            name: "Campari 0.04",
             price: "160",
             ingredients: "Alcoholic beverages",
           },
@@ -673,7 +673,7 @@
             ingredients: "Minced meat 250g, yellow cheese 100g",
           },
           {
-            name: "Kebapi with Kaymak",
+            name: "Kebapi with Kaymak 350g",
             price: "360",
             ingredients: "Minced meat dishes",
           },
@@ -693,7 +693,7 @@
             ingredients: "Мелено месо 300г, кашкавал, зденка, печурки, шунка",
           },
           {
-            name: "Kebabs",
+            name: "Kebabs 300g",
             price: "320",
             ingredients: "Minced meat dishes",
           },
@@ -809,12 +809,12 @@
         //Dishes in a pan
         [
         {
-            name: "Village Meat",
+            name: "Village Meat 450g",
             price: "440",
             ingredients: "Pork, chicken, cheese, mushrooms, onion, garlic, bell pepper, tomato",
           },
           {
-            name: "Lihnidia Pan",
+            name: "Lihnidia Pan 450g",
             price: "480",
             ingredients: "Pork, chicken, bacon, tomato, bell pepper, onion, garlic, champignon, smoked cheese",
 
@@ -831,7 +831,7 @@
 
           },
           {
-            name: "Mushrooms with Bacon and Cheese",
+            name: "Mushrooms with Bacon and Cheese 200g",
             price: "370",
             ingredients: "Dishes in a pan",
 
@@ -1040,12 +1040,12 @@
             ingredients: "Desserts",
           },
           {
-            name: "Chocolate Mousse",
+            name: "Chocolate Mousse 100g",
             price: "160",
             ingredients: "Desserts",
           },
           {
-            name: "Fruit Salad with Seasonal Fruit",
+            name: "Fruit Salad with Seasonal Fruit 300g",
             price: "220",
             ingredients: "Desserts",
           },
